# fc-ica-ml-nlp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
doc/: fc-ica-ml-nlp.md
script/: app.py  recog_digits.py  topic_model.py
