[project]
name = "fc-ica-ml-nlp"
version = "0.1.0"
description = "LLM 이전의 AI를 만나다 — 고전적 머신러닝과 한국어 NLP 특강 예제"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "pillow>=12.1.1",
    "kiwipiepy>=0.18.0",
    "gensim>=4.3.0",
    "pyldavis>=3.4.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
]
